@@ -5,7 +5,7 @@ Command Line News
 
 Version
 =======
-	``0.1.0``
+	``0.2.0``
 
 
 Installation
