@@ -1,5 +1,5 @@
 
-VERSION = "0.1.0"
+VERSION = "0.2.0"
 
 CHANNELS = {
     "cnn": {
