@@ -3,8 +3,8 @@
    You can adapt this file completely to your liking, but it should at least
    contain the root `toctree` directive.
 
-Welcome to CLNews's documentation!
-==================================
+CLNews v0.2.0 
+=============
 
 Contents:
 
@@ -14,7 +14,7 @@ Contents:
 shell
 =========================
 .. automodule:: clnews.shell
-   :members:
+   :members: 
 
 
 news
