@@ -52,6 +52,7 @@
  <a href="#C"><strong>C</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#L"><strong>L</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -149,18 +150,24 @@
   </dl></td>
 </tr></table>
 
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%" valign="top"><dl>
+      
+  <dt><a href="index.html#clnews.shell.less">less() (in module clnews.shell)</a>
+  </dt>
+
+  </dl></td>
+</tr></table>
+
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
       
-  <dt><a href="index.html#clnews.shell.CommandGet.print_output">print_output() (clnews.shell.CommandGet method)</a>
+  <dt><a href="index.html#clnews.shell.CommandHelp.print_output">print_output() (clnews.shell.CommandHelp method)</a>
   </dt>
 
       <dd><dl>
-        
-  <dt><a href="index.html#clnews.shell.CommandHelp.print_output">(clnews.shell.CommandHelp method)</a>
-  </dt>
-
         
   <dt><a href="index.html#clnews.shell.CommandList.print_output">(clnews.shell.CommandList method)</a>
   </dt>
