@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Welcome to CLNews’s documentation! &mdash; CLNews 0.1.0 documentation</title>
+    <title>CLNews v0.2.0 &mdash; CLNews 0.1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -44,8 +44,8 @@
         <div class="bodywrapper">
           <div class="body" role="main">
             
-  <div class="section" id="welcome-to-clnews-s-documentation">
-<h1>Welcome to CLNews&#8217;s documentation!<a class="headerlink" href="#welcome-to-clnews-s-documentation" title="Permalink to this headline">¶</a></h1>
+  <div class="section" id="clnews-v0-2-0">
+<h1>CLNews v0.2.0<a class="headerlink" href="#clnews-v0-2-0" title="Permalink to this headline">¶</a></h1>
 <p>Contents:</p>
 <div class="toctree-wrapper compound">
 <ul class="simple">
@@ -76,17 +76,6 @@ parent class.</p>
 <dt>Raises:</dt>
 <dd>ShellCommandExecutionError: An error occured when the event 
 retrieval fails.</dd>
-</dl>
-</dd></dl>
-
-<dl class="method">
-<dt id="clnews.shell.CommandGet.print_output">
-<code class="descname">print_output</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#clnews.shell.CommandGet.print_output" title="Permalink to this definition">¶</a></dt>
-<dd><p>Prints the output of the command</p>
-<dl class="docutils">
-<dt>Raises:</dt>
-<dd>ShellCommandOutputError: An error occured when the buffer is not a 
-list.</dd>
 </dl>
 </dd></dl>
 
@@ -147,6 +136,13 @@ list.</dd>
 <dd><p>Runs infinitely executing the commands given in input.</p>
 </dd></dl>
 
+</dd></dl>
+
+<dl class="function">
+<dt id="clnews.shell.less">
+<code class="descclassname">clnews.shell.</code><code class="descname">less</code><span class="sig-paren">(</span><em>func</em><span class="sig-paren">)</span><a class="headerlink" href="#clnews.shell.less" title="Permalink to this definition">¶</a></dt>
+<dd><p>Less decorator.</p>
+<p>Pipes the output of the decorated function into the less commans</p>
 </dd></dl>
 
 </div>
@@ -245,7 +241,7 @@ initialization</p>
         <div class="sphinxsidebarwrapper">
   <h3><a href="#">Table Of Contents</a></h3>
   <ul>
-<li><a class="reference internal" href="#">Welcome to CLNews&#8217;s documentation!</a></li>
+<li><a class="reference internal" href="#">CLNews v0.2.0</a></li>
 <li><a class="reference internal" href="#module-clnews.shell">shell</a></li>
 <li><a class="reference internal" href="#module-clnews.news">news</a></li>
 <li><a class="reference internal" href="#module-clnews.exception">exceptions</a></li>
