@@ -1,1 +1,1 @@
-Search.setIndex({envversion:46,terms:{all:0,channel_nam:0,prompt:0,help:0,execut:0,request:0,modul:0,commandlist:0,shellcommandoutputerror:0,fail:0,list:0,expect:0,wrap:0,"return":0,uncaught:0,feedpars:0,occur:0,infinit:0,index:0,given:0,from:0,unknown:0,channeldatanotfound:0,when:0,shellcommanddoesnotexist:0,event:0,content:0,channelservererror:0,titl:0,basic:0,print:0,input:0,channel_url:0,dure:0,channel:0,eventattrerror:0,"function":0,shell:[],run:0,deriv:0,parent:0,get:0,buffer:0,channelretrieveeventserror:0,initi:0,commandhelp:0,wrong:0,rais:0,date:0,"new":[],put:0,get_ev:0,print_output:0,data:0,"class":0,avail:0,serv:0,search:0,commandget:0,retriev:0,name:0,url:0,type:0,current:0,descript:0,"abstract":0,server:0,shellcommandchannelnotfound:0,"while":0,shellcommandexecutionerror:0,command:0,error:0,output:0,implement:0,attribut:0,page:0,summari:0},objtypes:{"0":"py:module","1":"py:method","2":"py:class","3":"py:exception"},objnames:{"0":["py","module","Python module"],"1":["py","method","Python method"],"2":["py","class","Python class"],"3":["py","exception","Python exception"]},filenames:["index"],titles:["Welcome to CLNews&#8217;s documentation!"],objects:{"clnews.shell.CommandGet":{execute:[0,1,1,""],print_output:[0,1,1,""]},"clnews.news":{Event:[0,2,1,""],Channel:[0,2,1,""]},"clnews.shell.Shell":{run:[0,1,1,""]},"clnews.news.Channel":{get_events:[0,1,1,""]},"clnews.shell":{Shell:[0,2,1,""],CommandHelp:[0,2,1,""],CommandGet:[0,2,1,""],Command:[0,2,1,""],CommandList:[0,2,1,""]},"clnews.exception":{ChannelRetrieveEventsError:[0,3,1,""],ShellCommandChannelNotFound:[0,3,1,""],ChannelDataNotFound:[0,3,1,""],ShellCommandDoesNotExist:[0,3,1,""],ShellCommandOutputError:[0,3,1,""],ChannelServerError:[0,3,1,""],ShellCommandExecutionError:[0,3,1,""],EventAttrError:[0,3,1,""]},"clnews.shell.CommandHelp":{execute:[0,1,1,""],print_output:[0,1,1,""]},"clnews.shell.CommandList":{execute:[0,1,1,""],print_output:[0,1,1,""]},clnews:{news:[0,0,0,"-"],exception:[0,0,0,"-"],shell:[0,0,0,"-"]}},titleterms:{clnew:0,shell:0,welcom:0,auto:[],except:0,indic:0,member:[],tabl:0,"new":0,document:0}})
+Search.setIndex({envversion:46,terms:{all:0,channel_nam:0,prompt:0,help:0,execut:0,less:0,request:0,modul:0,commandlist:0,shellcommandoutputerror:0,fail:0,list:0,expect:0,wrap:0,"return":0,comman:0,feedpars:0,occur:0,date:0,infinit:0,index:0,channelretrieveeventserror:0,from:0,decor:0,unknown:0,channeldatanotfound:0,when:0,shellcommanddoesnotexist:0,event:0,content:0,channelservererror:0,titl:0,basic:0,print:0,input:0,type:0,"abstract":0,channel:0,eventattrerror:0,"function":0,shell:[],run:0,deriv:0,parent:0,get:0,buffer:0,given:0,initi:0,commandhelp:0,wrong:0,rais:0,func:0,"new":[],put:0,get_ev:0,print_output:0,data:0,"class":0,dure:0,avail:0,serv:0,search:0,commandget:0,retriev:0,name:0,url:0,channel_url:0,current:0,descript:0,uncaught:0,server:0,pipe:0,shellcommandchannelnotfound:0,"while":0,shellcommandexecutionerror:0,command:0,error:0,output:0,implement:0,attribut:0,page:0,summari:0},objtypes:{"0":"py:module","1":"py:method","2":"py:class","3":"py:exception","4":"py:function"},objnames:{"0":["py","module","Python module"],"1":["py","method","Python method"],"2":["py","class","Python class"],"3":["py","exception","Python exception"],"4":["py","function","Python function"]},filenames:["index"],titles:["CLNews v0.2.0"],objects:{"clnews.shell.CommandGet":{execute:[0,1,1,""]},"clnews.news":{Event:[0,2,1,""],Channel:[0,2,1,""]},"clnews.shell.Shell":{run:[0,1,1,""]},"clnews.news.Channel":{get_events:[0,1,1,""]},"clnews.shell":{Shell:[0,2,1,""],less:[0,4,1,""],CommandList:[0,2,1,""],CommandHelp:[0,2,1,""],CommandGet:[0,2,1,""],Command:[0,2,1,""]},"clnews.exception":{ChannelRetrieveEventsError:[0,3,1,""],ShellCommandChannelNotFound:[0,3,1,""],ChannelDataNotFound:[0,3,1,""],ShellCommandDoesNotExist:[0,3,1,""],ShellCommandOutputError:[0,3,1,""],ChannelServerError:[0,3,1,""],ShellCommandExecutionError:[0,3,1,""],EventAttrError:[0,3,1,""]},"clnews.shell.CommandHelp":{execute:[0,1,1,""],print_output:[0,1,1,""]},"clnews.shell.CommandList":{execute:[0,1,1,""],print_output:[0,1,1,""]},clnews:{news:[0,0,0,"-"],exception:[0,0,0,"-"],shell:[0,0,0,"-"]}},titleterms:{clnew:0,shell:0,welcom:[],auto:[],except:0,indic:0,member:[],tabl:0,"new":0,document:[]}})
