@@ -1,1 +1,2 @@
 v<0.1.0>, <20141220> -- Initial release.
+v<0.2.0>, <20141220> -- Apply 'less' style output of the events 
